--- a/templates/account/password_reset_from_key.html
+++ b/templates/account/password_reset_from_key.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="row justify-content-center">
     <div class="col-md-8 col-lg-6">
-        <div class="card shadow mb-5">
+        <div class="card auth-card mb-5">
             <div class="card-header bg-primary text-white">
                 <h3 class="my-2 text-center">Изменение пароля</h3>
             </div>
