--- a/templates/include/nav_menu.html
+++ b/templates/include/nav_menu.html
@@ -43,14 +43,32 @@
 
    <!-- Добавляем разделитель и пункт для входа/выхода -->
     {% if user.is_authenticated %}
-    <!-- Если пользователь авторизован - показываем кнопку выхода -->
-    <li class="nav-item">
-        <form method="post" action="{% url 'account_logout' %}" class="m-0 p-0">
-            {% csrf_token %}
-            <button type="submit" class="nav-link btn btn-link" style="background: none; border: none; width: 100%; text-align: left;">
-                <i class="bi bi-box-arrow-right me-1"></i> Выход ({{ user.username }})
-            </button>
-        </form>
+    <!-- Если пользователь авторизован - показываем выпадающее меню пользователя -->
+    <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-person-circle me-1"></i> {{ user.username }}
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="userDropdown">
+            <li>
+                <a class="dropdown-item" href="{% url 'account_email' %}">
+                    <i class="bi bi-envelope me-2"></i>Управление Email
+                </a>
+            </li>
+            <li>
+                <a class="dropdown-item" href="{% url 'account_change_password' %}">
+                    <i class="bi bi-key me-2"></i>Изменить пароль
+                </a>
+            </li>
+            <li><hr class="dropdown-divider"></li>
+            <li>
+                <form method="post" action="{% url 'account_logout' %}" class="m-0 p-0">
+                    {% csrf_token %}
+                    <button type="submit" class="dropdown-item">
+                        <i class="bi bi-box-arrow-right me-2"></i>Выход
+                    </button>
+                </form>
+            </li>
+        </ul>
     </li>
     {% else %}
     <!-- Если пользователь не авторизован - показываем кнопки входа и регистрации -->
